# PlaygroundGSoC

./: .gitmodules  CMakeLists.txt  Correspondance2d3dPose.cc  FailedRegionGrabCut.cc  ICP2d3d.cc  Procrustes.cc  SilhouetteExtraction.cc  data.cc  quad.ply
